--- a/src/components/Content/index.scss
+++ b/src/components/Content/index.scss
@@ -1,4 +1,61 @@
 .content {
+  width: 100%;
   flex: 1 1 auto;
-  padding: 5px;
+  padding: 10px 10px 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  &__title {
+    font-size: 14px;
+    color: #999;
+    font-weight: 800;
+    line-height: 1;
+  }
+
+  &__table-wrapper {
+    width: 100%;
+    flex: 1 1 auto;
+    position: relative;
+    margin: 10px 0 0 0;
+    overflow: auto;
+  }
+
+  &__table {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-collapse: separate;
+    border-spacing: 0 10px;
+
+    &--terms {
+      text-align: left;
+    }
+
+    &--percentage {
+      text-align: center;
+    }
+
+    &--count {
+      text-align: right;
+    }
+  }
+
+  &__th {
+    border-bottom: 2px solid #999;
+    border-collapse: separate;
+    border-collapse: separate;
+    border-spacing: 5px 5px;
+  }
+
+  &__td {
+    &.content__table--terms {
+      font-weight: 800;
+    }
+  }
 }
