--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,3 +22,8 @@ button {
   background-color: transparent;
   cursor: pointer;
 }
+
+h1, h2, h3, h4, h5, p {
+  margin: 0;
+}
+
